--- a/main.html
+++ b/main.html
@@ -6,43 +6,30 @@
     <title>Dog Adoption Application</title>
 </head>
 <body>
-    <h1>Dog Adoption Application Form</h1>
-    <form action="/submit-application" method="POST">
-        <!-- Name Field -->
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Name" required>
-        <br><br>
+   <h1>Dog Adoption Application</h1>
+<form>
+    <label for="name">Name</label>
+    <input type="text" id="name" placeholder="Name">
 
-        <!-- Phone Number Field -->
-        <label for="phone">Phone Number:</label>
-        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
-        <br><br>
+    <label for="phone">Phone Number</label>
+    <input type="text" id="phone" placeholder="Phone Number">
 
-        <!-- Address Field -->
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" placeholder="Address" required>
-        <br><br>
+    <label for="address">Address</label>
+    <input type="text" id="address" placeholder="Address">
 
-        <!-- Checkbox Field -->
-        <label>
-            <input type="checkbox" id="livedWithDog" name="livedWithDog" value="Have you ever lived with a Dog before?">
-            Have you ever lived with a Dog before?
-        </label>
-        <br><br>
+    <label for="checkbox">Have you ever lived with a Dog before?</label>
+    <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 
-        <!-- Multi-Select for Preferred Breeds -->
-        <label for="breeds">Please select your preferred breeds:</label>
-        <select id="breeds" name="breeds" multiple required>
-            <option value="labrador">Labrador</option>
-            <option value="golden_retriever">Golden Retriever</option>
-            <option value="german_shepherd">German Shepherd</option>
-            <option value="beagle">Beagle</option>
-            <option value="bulldog">Bulldog</option>
-        </select>
-        <br><br>
+    <label for="multiSelect">Please select your preferred breeds</label>
+    <select id="multiSelect" multiple>
+        <option value="Breed1">Breed1</option>
+        <option value="Breed2">Breed2</option>
+        <option value="Breed3">Breed3</option>
+        <!-- Add more options as needed -->
+    </select>
 
-        <!-- Submit Button -->
-        <input type="submit" value="Submit">
-    </form>
+    <input type="submit" id="submit" value="Submit">
+</form>
+
 </body>
 </html>
