--- a/main.html
+++ b/main.html
@@ -3,33 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <title>Dog Adoption Application</title>
 </head>
 <body>
-   <h1>Dog Adoption Application</h1>
-<form>
-    <label for="name">Name</label>
-    <input type="text" id="name" placeholder="Name">
+    <h1>Dog Adoption Application</h1>
+    <form>
+        <!-- Name Field -->
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Name" required>
 
-    <label for="phone">Phone Number</label>
-    <input type="text" id="phone" placeholder="Phone Number">
+        <!-- Phone Number Field -->
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" placeholder="Phone Number" required>
 
-    <label for="address">Address</label>
-    <input type="text" id="address" placeholder="Address">
+        <!-- Address Field -->
+        <label for="address">Address</label>
+        <input type="text" id="address" placeholder="Address" required>
 
-    <label for="checkbox">Have you ever lived with a Dog before?</label>
-    <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+        <!-- Checkbox Field -->
+        <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
 
-    <label for="multiSelect">Please select your preferred breeds</label>
-    <select id="multiSelect" multiple>
-        <option value="Breed1">Breed1</option>
-        <option value="Breed2">Breed2</option>
-        <option value="Breed3">Breed3</option>
-        <!-- Add more options as needed -->
-    </select>
+        <!-- Multi-Select Field -->
+        <label for="multiSelect">Please select your preferred breeds</label>
+        <select id="multiSelect" multiple required>
+            <option value="Beagle">Beagle</option>
+            <option value="Labrador">Labrador</option>
+            <option value="Poodle">Poodle</option>
+            <option value="Boxer">Boxer</option>
+            <option value="Bulldog">Bulldog</option>
+        </select>
 
-    <input type="submit" id="submit" value="Submit">
-</form>
-
+        <!-- Submit Button -->
+        <input type="submit" id="submit" value="Submit">
+    </form>
 </body>
 </html>
